# rust_web

./: .gitignore  Cargo.toml  README.md  cmdb.sql  generate_db_schema.sh  init_db.sql  project_structure_printer.py
config/: config.toml  dev.toml  prod.toml
src/: app.rs  lib.rs  main.rs  server.rs  signals.rs
src/common/: enums.rs  error.rs  mod.rs  resp.rs  value.rs
src/common/auth/: crypto.rs  jwt.rs  mod.rs
src/common/db/: config.rs
src/common/log/: config.rs
src/common/redis/: config.rs  utils.rs
src/config/: cfg.rs  globals.rs  loader.rs  mod.rs  structs.rs
src/dto/admin/: auth_dto.rs  common_dto.rs  mod.rs  role_dto.rs  sys_auth_dto.rs  sys_menu_dto.rs  sys_menu_routes_dto.rs  sys_permission_dto.rs  sys_role_dto.rs  sys_role_permission_dto.rs  sys_route_dto.rs  sys_user_dto.rs  sys_user_role_dto.rs
src/handlers/admin/: mod.rs  sys_auth_handler.rs  sys_auth_routes.rs  sys_menu_handler.rs  sys_permission_handler.rs  sys_permission_routes.rs  sys_role_handler.rs  sys_role_permission_handler.rs  sys_route_handler.rs  sys_user_handler.rs  sys_user_role_handler.rs  sys_user_routes.rs
src/middleware/: auth_middleware.rs  jwt_auth_middleware.rs  mod.rs  permission_check_middleware.rs
src/models/: mod.rs
src/models/database/: mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  sea_orm_active_enums.rs  user_roles.rs  users.rs
src/routes/: test.rs  user_routes.rs
src/routes/admin/: auth_routes.rs  mod.rs  role_routes.rs  sys_auth_routes.rs  sys_menu_routes.rs  sys_role_routes.rs  sys_user_role_routes.rs  user_routes.rs
src/schema/admin/: mod.rs  prelude.rs  sea_orm_active_enums.rs  sys_menu.rs  sys_permission.rs  sys_role.rs  sys_role_permission.rs  sys_user.rs  sys_user_role.rs
src/schemas/: mod.rs
src/schemas/admin/: impl_for.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  sys_api.rs  sys_menu.rs  sys_menu_permission.rs  sys_permission.rs  sys_permission_action.rs  sys_permission_target.rs  sys_role.rs  sys_role_permission.rs  sys_user.rs  sys_user_role.rs
src/services/: user_services.rs
src/services/admin/: mod.rs  sys_menu.rs  sys_menu_services.rs  sys_permission_services.rs  sys_role_permission_services.rs  sys_role_services.rs  sys_route_services.rs  sys_user_role_services.rs  sys_user_services.rs
src/utils/: crypto.rs  database.rs  error.rs  jwt.rs  logger.rs  mod.rs  mysql.rs
tests/: jwt_integration_test.rs  menu_test.rs  permission_test.rs  role_permission_test.rs  role_test.rs  user_role_test.rs  user_test.rs
