[package]
name = "my-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix = "0.13.2"
actix-web = "4.4.1"
actix-rt = "2.5"  # Use the latest version compatible with your project
signal-hook = "0.3" # Use the latest version compatible with your project
tokio = { version = "1.0", features = ["full"] } # 启用 tokio 的全部特性
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
once_cell = "1.8"
log = "0.4"
env_logger = "0.11.0"
thiserror = "1.0"
sea-orm = { version = "^0.12.0", features = [  "sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
argon2 = "0.5"
bcrypt = "0.15.0"
jsonwebtoken = "9.1.0"
chrono = "0.4"
serde_json = "1.0.108"
validator = { version = "0.18.1", features = ["derive"] }
futures-util = { version = "0.3.30", features = [] }
futures = { version = "0.3.30", features = [] }
actix-service ="2.0"
actix-redis = "0.13.0"
redis-async = "0.17.0"
mockall = "0.12.1"
actix-cors = "0.7.0"
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
time = "0.3.34"
regex = "1.10.4"